<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <ImageView
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_support" />

            <!--Layout Phone Auth-->

            <LinearLayout
                android:id="@+id/div_tlp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/text_h1_price"
                    android:text="@string/lengkapi_data_untuk_mesin_antrian"
                    android:textColor="@color/dark"/>

                <TextView
                    style="@style/text_reg_10"
                    android:text="@string/silahkan_lengkapi_data_untuk_mesin_antrian"
                    android:textColor="@color/dark2"
                    android:layout_marginTop="@dimen/_5sdp"/>

                <TextView
                    style="@style/text_reg_10"
                    android:text="@string/nama_loket"
                    android:textColor="@color/dark"
                    android:layout_marginTop="@dimen/_16sdp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_6sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:background="@drawable/background_border_abu1">

                    <EditText
                        android:id="@+id/ldata_edt_loket"
                        style="@style/editTextEntryName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparant"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/dark"
                        android:singleLine="true"
                        android:hint="@string/_1"/>

                </LinearLayout>

                <TextView
                    style="@style/text_reg_10"
                    android:text="@string/administrator"
                    android:textColor="@color/dark"
                    android:layout_marginTop="@dimen/_10sdp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_6sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:background="@drawable/background_border_abu1">

                    <EditText
                        android:singleLine="true"
                        android:id="@+id/ldata_edt_admin"
                        style="@style/editTextEntryName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparant"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/dark"
                        android:hint="@string/nama_anda"/>

                </LinearLayout>

                <TextView
                    style="@style/text_reg_10"
                    android:text="@string/nama_tempat"
                    android:textColor="@color/dark"
                    android:layout_marginTop="@dimen/_10sdp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_6sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:background="@drawable/background_border_abu1">

                    <EditText
                        android:singleLine="true"
                        android:id="@+id/ldata_edt_tempat"
                        style="@style/editTextEntryName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparant"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/dark"
                        android:hint="@string/hint_rs_sekolah"/>

                </LinearLayout>

                <TextView
                    style="@style/text_reg_10"
                    android:text="@string/kode_antrian"
                    android:textColor="@color/dark"
                    android:layout_marginTop="@dimen/_10sdp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_6sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:background="@drawable/background_border_abu1">

                    <EditText
                        android:textAllCaps="true"
                        android:singleLine="true"
                        android:id="@+id/ldata_edt_kode"
                        style="@style/editTextEntryName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparant"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/dark"
                        android:hint="@string/hint_kode_antri"/>
                </LinearLayout>
                <TextView
                    android:layout_margin="@dimen/_5sdp"
                    style="@style/text_reg_8"
                    android:text="@string/deskripsi_kode_antri"/>

                <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        style="@style/text_reg_10"
                        android:text="@string/suara_panggilan"
                        android:textColor="@color/dark"/>

                    <Switch
                        android:id="@+id/ldata_switch"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        style="@style/text_reg_10"
                        android:text="@string/layar_tetap_menyala"
                        android:textColor="@color/dark"/>

                    <Switch
                        android:id="@+id/ldata_switch_layar"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ldata_div_simpan"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/background_shape_primary"
                        android:gravity="center"
                        android:text="@string/simpan"
                        android:fontFamily="@font/inter_bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>