<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_shape_primary"
    android:layout_height="match_parent"
    android:id="@+id/fonboard_div_root"
    tools:context=".ui.fragment.onboarding.OnBoardingFragment">

    <RelativeLayout
        android:layout_above="@+id/fonboard_div_action"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fonboard_img"
                android:layout_margin="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:src="@drawable/ic_support"/>

            <TextView
                android:id="@+id/fonboard_tv_judul"
                android:layout_marginTop="@dimen/_20sdp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                style="@style/text_bold_16_match"
                android:text="@string/page_satu"/>


            <TextView
                android:id="@+id/fonboard_tv_deskripsi"
                android:padding="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                style="@style/text_reg_12_match"
                android:text="@string/deskripsi_pada_menu_konsen_ini_untuk_di_jelaskan_lebih_lanjut_dan_untuk_menjelaskan_fitur_fitur_oleh_aplikator_ke_pada_pengguna_dan_di_baca_lagi_oleh_penguna"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fonboard_div_action"
        android:layout_margin="@dimen/_16sdp"
        android:layout_alignParentBottom="true"

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/fonboard_tv_lewati"
            android:textColor="@color/white"
            style="@style/text_reg_12"
            android:layout_weight="1"
            android:text="@string/lewati"/>

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/fonboard_dot_indikator"
            android:layout_width="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:dotsColor="@color/abu1"
            app:dotsCornerRadius="8dp"
            app:dotsSize="@dimen/_5sdp"
            app:dotsSpacing="@dimen/_2sdp"
            app:dotsWidthFactor="2.5"
            app:selectedDotColor="@color/white" />

        <TextView
            android:id="@+id/fonboard_tv_lanjut"
            android:gravity="right"
            android:textColor="@color/white"
            android:layout_weight="1"
            style="@style/text_reg_12"
            android:text="@string/lanjut"/>
    </LinearLayout>

</RelativeLayout>